drills/version-1/README.md
## Project Proposal

For this drill, you'll be proposing your next project! You've got an idea that will revolutionize the way the world does its laundry. But before you start writing, you've got to get some funding. Put together your pitch to your would-be-investors. Update proposal.md with your proposal

* Project Description: Think "Elevator Pitch". Succinctly, but completely describe what you'll be building
* Problem Statement: What problem is your app solving? Who has it?
* How will your project solve the problem?
* Map the user experience. When the user opens your app, what happens? What information does your app need from your user? What does it output in return?
* List the technologies you plan to use. This should be a complete list, including APIs. Be prepared to defend the items on this list. This means you should research the technologies/APIs, and know why you're planning to use each.
