drills/version-2/README.md
## Project Proposal

You work at a company that makes you punch an honest-to-goodness time card to track your hours. It drives you crazy, but everyone seems too busy to do anything about it. You've come up with an idea to bring the office into the 21st century, but have to ask your boss to use work time to work on the project. Update proposal.md with your proposal

* Project Description: Think "Elevator Pitch". Succinctly, but completely describe what you'll be building
* Problem Statement: What problem is your app solving? Who has it?
* How will your project solve the problem?
* Map the user experience. When the user opens your app, what happens? What information does your app need from your user? What does it output in return?
* List the technologies you plan to use. This should be a complete list, including APIs. Be prepared to defend the items on this list. This means you should research the technologies/APIs, and know why you're planning to use each.
